--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 PORT='5000'
 SECRET_KEY='marvzknowsquickseatbe'
 
+DOMAIN_ORIGIN='http://localhost:5173'
+
 # DB
 MYSQL_HOST='localhost'
 MYSQL_USER='root'
