adjust search models and add transfer now showing routes and logic

--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ DOMAIN_ORIGIN='http://localhost:5173'
 # DB
 MYSQL_HOST='localhost'
 MYSQL_USER='root'
-MYSQL_PASSWORD=''
+MYSQL_PASSWORD='marvzknows'
 MYSQL_DB_NAME='cinema'
 
 # CLOUDINARY 
